--- a/src/components/row/row.scss
+++ b/src/components/row/row.scss
@@ -1,4 +1,18 @@
 
+$maxWidth: 1350;
+
+@mixin adaptiv-font($pcSize, $mobSize) {
+  $addSize: $pcSize - $mobSize;
+  $addMobSize: $addSize + $addSize * 0.7;
+  @media (max-width: 767px) {
+    font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+  }
+  @media (min-width: 767px) {
+    font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
+  }
+}
+
+
 body {
   margin: 0;
   padding: 0;
@@ -6,6 +20,18 @@ body {
 }
 h1, h2, h3, h4 {
   margin: 0;
+}
+span {
+  @include adaptiv-font(16, 12);
+}
+
+
+a {
+  color: #FFFFFF;
+  text-decoration: none;
+  &:hover {
+    color: #96ccff;
+  }
 }
 
 .wrapper-app {
@@ -27,14 +53,17 @@ nav {
   right: 0;
   height: 50px;
   color: #FFFFFF;
+  padding:0 30px;
   .logo {
-    margin-left: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 150px;
   }
   .logout {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-right: 30px;
     width: 80px;
     cursor: pointer;
     &:hover {
@@ -43,6 +72,6 @@ nav {
   }
 }
 .app-content {
-  margin-top: 50px;
+  padding-top: 50px;
   height: 100%;
 }
