--- a/src/components/tasks/tasks.scss
+++ b/src/components/tasks/tasks.scss
@@ -19,6 +19,16 @@
   }
 }
 
+.cellText {
+  max-width: 100px;
+  max-height: 40px;
+  overflow: hidden;
+  display: -webkit-box;
+-webkit-box-orient: vertical;
+-webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+}
+
 //create-task
 
 .inputCreate {
